--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "dotenv": "^8.2.0",
     "env": "0.0.2",
     "fastify": "^3.8.0",
+    "fastify-gql": "^5.8.2",
     "fastify-swagger": "^3.5.0",
+    "graphql": "^15.4.0",
     "mongoose": "^5.10.15"
   },
   "devDependencies": {
